third_party/move/move-compiler-v2/transactional-tests/tests/operator_eval/op_with_side_effect_49.move
//# publish
module 0xc0ffee::m {
    inline fun call(f: ||u64): u64 {
        f()
    }

    public fun test(): u64 {
        let x = 1;
        x + call(|| {x = x + 1; x}) + call(|| {x = x + 7; x})
    }
}

//# run 0xc0ffee::m::test
